--- a/_posts/2015-11-19-prelude.md
+++ b/_posts/2015-11-19-prelude.md
@@ -2,6 +2,7 @@
 layout: post
 title: Prelude
 date: 2015-11-15 33:50:00 -0800
+redirect_from: /prelude/
 ---
 
 I'll write a proper bio later, but for now this is something to establish context for future posts.
